@@ -26,6 +26,7 @@ class EditTextWidget;
 
 #include "Dialog.hxx"
 #include "Command.hxx"
+#include "EditableWidget.hxx"
 
 class InputTextDialog : public Dialog, public CommandSender
 {
@@ -45,6 +46,8 @@ class InputTextDialog : public Dialog, public CommandSender
     const string& getResult(int idx = 0);
 
     void setText(const string& str, int idx = 0);
+    void setTextFilter(EditableWidget::TextFilter& f, int idx = 0);
+
     void setEmitSignal(int cmd) { myCmd = cmd; }
     void setTitle(const string& title);
 
